feat: update endpoint names
